src/css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Alkatra&display=swap");

* {
  box-sizing: border-box;
  cursor: default;
}

body {
  height: 100vh;
  width: 100vw;
  font-family: "Alkatra", cursive;
}

.todo-container {
  width: 100%;
  height: 100%;
  background: linear-gradient(to bottom right, #f5d0fe, #fb7185, #d8b4fe);
  color: #fff;
  display: flex;
}

/* 



Sidebar Styling



*/

.sidebar {
  background: linear-gradient(to bottom right, #0284c7, #0ea5e9);

  align-self: center;
  width: calc(25% - 2rem);
  height: calc(100% - 4rem);
  padding: 1rem;
  margin-left: 2rem;

  border: 1px solid none;
  border-radius: 12px;
  box-shadow: 2px 2px 2px 2px #18181b90;

  display: flex;
  flex-direction: column;
}

.sidebar-header {
  width: 100%;
  height: 20%;
  position: relative;
}

.header-form {
  position: absolute;
  top: 5%;

  height: 100%;
  width: 100%;

  background: linear-gradient(to bottom right, #0284c7, #0ea5e9);

  border: 1px solid none;
  border-radius: 6px;
  box-sizing: border-box;
  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);

  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0.5rem;
  gap: 0.5rem;
}

.header-name-label {
  margin-top: 1.5rem;

  border-bottom: 1px solid #ce96a6;

  font-size: 1.5rem;
  font-family: "Alkatra", cursive;
  font-weight: 800;
  color: snow;
}

#header-name {
  width: 100%;
  height: 25%;

  background: linear-gradient(to bottom right, #86efac, #34d399, #2dd4bf);
  border: 1px solid #ce96a6;
  border-radius: 6px;
  box-sizing: border-box;
  box-shadow: 1px 1px rgba(255, 255, 255, 0.2);

  outline: none;

  font-size: 1.3rem;
  font-family: "Alkatra", cursive;
  color: #db2777;
}

#header-name:hover {
  cursor: text;
}

.todo-list-header {
  height: 30%;
  width: 100%;
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid #ffffff80;
  align-items: end;
  margin-top: 0.5rem;
}

.todo-list-header h1 {
  text-align: center;
  font-size: 32px;
  font-weight: 800;
}

.pencil {
  height: 2.5rem;
}

.pencil:hover,
.plus:hover,
.return-image:hover {
  cursor: pointer;
  opacity: 0.7;
  scale: 1.05;
}

.sidebar-main {
  margin-top: 2rem;
  font-size: 32px;

  display: flex;
  flex-direction: column;
  gap: 1rem;

  overflow: hidden;
}

.sidebar-main header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  border-bottom: 1px solid #ffffff80;
}

img.plus {
  height: 2rem;
}

.project-list {
  font-size: 28px;

  display: flex;
  flex-direction: column;
  gap: 1rem;

  -ms-overflow-style: none; /* for Internet Explorer, Edge */
  scrollbar-width: none; /* for Firefox */
  overflow-y: scroll;
}

.project-list::-webkit-scrollbar,
.todo-list::-webkit-scrollbar {
  display: none; /* for Chrome, Safari, and Opera */
}

.project-title-container {
  display: flex;
  justify-content: space-between;
}

.project-title {
  transition: 0.3s ease;
}

.project-title:hover {
  cursor: pointer;
}

.project-title:hover::before {
  content: "-> ";
}

/* 



Todo Display styling



*/

.todo-main {
  background: linear-gradient(to bottom right, #0284c7, #0ea5e9, #38bdf8);

  align-self: center;
  margin: 0 2rem;
  width: calc(75% - 4rem);
  height: calc(100% - 4rem);
  border: 1px solid none;
  border-radius: 12px;

  box-shadow: 2px 2px 2px 2px #18181b90;

  display: flex;
  flex-direction: column;
  align-items: center;

  flex: 1;
}

.todo-list {
  width: 80%;
  height: 87%;
  margin: 2rem;

  display: flex;
  flex-direction: column;
  gap: 0.5rem;

  font-size: 1.5rem;
  list-style-position: inside;

  -ms-overflow-style: none; /*for Internet Explorer, Edge*/
  scrollbar-width: none; /*for Firefox*/
  overflow-y: scroll;
}

.todo {
  position: relative;
  display: flex;
  align-items: center;
  gap: 1rem;
}

.circle {
  margin-left: 1%;
  height: 1.5rem;
  width: 1.5rem;
  min-height: 1.5rem;
  min-width: 1.5rem;
  border: 1px solid #fff;
  border-radius: 50%;

  position: relative;
  align-self: start;
}

.circle:hover,
.check-mark:hover {
  cursor: pointer;
  scale: 1.05;
}

.check-mark {
  position: absolute;
  top: 10%;
  left: 15%;
  height: 80%;
  width: auto;
}

.todo-item {
  word-break: break-word;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;

  width: calc(100% - 4rem);
}

.todo-item:hover {
  overflow: visible;
  white-space: normal;
}

.todo-item:hover {
  cursor: text;
}

/* 
.todo:hover span {
  display: inline;
} */

img.cog {
  margin-left: auto;
  height: 20px;
  width: auto;
  transition: 0.25s ease;
  align-self: start;
}

.cog:hover,
.todo p.delete-icon:hover {
  opacity: 0.9;
  scale: 1.15;
  cursor: pointer;
}

.todo .delete-icon {
  font-size: 80%;
  margin-left: auto;
  margin-right: 0.3rem;
  font-family: Arial;
  font-weight: 1000;
}

.crossed {
  text-decoration: line-through;
  color: #cbd5e1;
}

.todo-form {
  display: flex;
  margin-top: auto;

  width: 100%;
  height: 13%;

  justify-content: center;
}

.todo-typing-area {
  display: flex;
  gap: 1rem;

  width: 100%;
  padding: 2rem 6rem;

  border: 1px solid none;
  border-radius: 0 0 12px 12px;
  box-shadow: inset 0px 2px 2px 2px #18181b90;
  background-color: #0284c7;
}

.return-image {
  height: 100%;
  width: auto;

  align-self: end;
}

#todo-title {
  display: flex;
  align-items: end;

  cursor: text;

  font-size: 1.5rem;
  font-family: "Alkatra", cursive;

  width: 90%;
  height: 2rem;
  line-height: 2rem;
  margin-top: auto;
  border: 2px solid none;
  border-radius: 12px;
  outline: none;
}

.todo-button {
  height: 3rem;
  width: auto;

  background: none;
  border: none;

  padding-top: 0.5rem;
}

/* 


Todo/Project Info Styling



*/

.item-info {
  background: linear-gradient(to bottom right, #0284c7, #0ea5e9, #38bdf8);

  align-self: center;
  width: calc(25% - 2rem);
  height: calc(100% - 4rem);
  padding: 1rem;
  margin-right: 2rem;

  border: 1px solid none;
  border-radius: 12px;
  box-shadow: 2px 2px 2px 2px #18181b90;

  display: flex;
  flex-direction: column;

  gap: 1rem;

  position: relative;
}

.info-delete {
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  top: 1rem;
  left: calc(100% - 2rem);

  transition: 0.3s ease;
}

.info-delete:hover {
  scale: 1.05;
  cursor: pointer;
}

.item-info-top,
.item-info-bottom,
.item-info-bottom form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  position: relative;
}

.item-info h2 {
  font-size: 32px;
  border-bottom: 1px solid #ffffff80;
  font-weight: 800;
}

.item-info-top div p:hover,
.item-info-bottom input#todo-name,
.item-info-bottom textarea {
  cursor: text;
}

.item-info-top div,
.item-info-bottom div {
  display: flex;
  gap: 0.5rem;
  font-size: 28px;
  line-height: 100%;
}

.item-info-top div h3,
.item-info-bottom label {
  font-weight: 500;
  font-size: 20px;
}

.item-info-top div p {
  width: 60%;
  font-size: 20px;
  word-break: break-word;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.item-info-top div p:hover {
  overflow: visible;
  white-space: normal;
}

.item-info-bottom {
  margin-top: 2rem;
}

.item-info-bottom #todo-name,
.item-info-bottom #todo-description,
.item-info-bottom #project-name,
.item-info-bottom #project-description {
  height: 7rem;
  resize: none;
}

.item-info-bottom #todo-name,
.item-info-bottom #todo-date,
.item-info-bottom #todo-priority,
.item-info-bottom #todo-description,
.item-info-bottom #project-name,
.item-info-bottom #project-description {
  width: 50%;
  margin-left: auto;
  border: 1px solid none;
  border-radius: 6px;

  outline: none;
  font-size: 16px;
}

.item-info-bottom #todo-date {
  cursor: pointer;
}

.item-info-bottom div:last-child {
  justify-content: center;
  margin-top: 1rem;
}

.item-info-bottom .change-item-button {
  width: 8rem;
  height: 3rem;

  background: linear-gradient(to bottom right, #f5d0fe, #fb7185, #d8b4fe);

  border: 1px solid #ce96a6;
  border-radius: 7px;
  box-shadow: 1px 1px rgba(0, 0, 0, 0.2);

  font-size: 1.5rem;
  font-family: "Alkatra", cursive;
  color: snow;

  text-align: center;
  line-height: 3rem;
  margin-top: auto;
}

.change-item-button:hover {
  cursor: pointer;
  opacity: 0.9;
}

.hide {
  display: none;
}

